--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
     "socket.io": "^4.7.2"
   }
 }
